manifests/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amber
  namespace: amber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amber-api
  template:
    metadata:
      labels:
        app: amber-api
    spec:
      volumes:
        - name: config-vol
          configMap:
            name: amber-config
      imagePullSecrets:
        - name: leaf
      containers:
        - name: amber
          image: leafdev.top/leaf/rag-new:efd643e
          imagePullPolicy: IfNotPresent
          args:
            - http
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8082
          ports:
            - containerPort: 8000
              name: http-8000
            - containerPort: 8082
              name: health
          volumeMounts:
            - mountPath: /app/config.yaml
              name: config-vol
              subPath: config.yaml
