manifests/deployment-schedule.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amber-schedule
  namespace: amber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amber-schedule
  template:
    metadata:
      labels:
        app: amber-schedule
    spec:
      volumes:
        - name: config-vol
          configMap:
            name: amber-config
      imagePullSecrets:
        - name: leaf
      containers:
        - name: amber-schedule
          image: leafdev.top/leaf/rag-new:efd643e
          imagePullPolicy: IfNotPresent
          args:
            - schedule
          volumeMounts:
            - mountPath: /app/config.yaml
              name: config-vol
              subPath: config.yaml
