manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amber-api
  namespace: amber
spec:
  selector:
    app: amber-api
  ports:
    - port: 8000
      name: http-8000
  type: ClusterIP
