manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amber
  namespace: amber
spec:
  ingressClassName: nginx
  rules:
    - host: amber-api.leaflow.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amber-api
                port:
                  name: http-8000
